# MiniXML

./: CMakeLists.txt  README  config.cmake.h.in
CMake/: MiniXMLConfig.cmake  SystemChecks.cmake  execute_capture.cmake  test_inline.c
doc/: CMakeLists.txt
test/: CMakeLists.txt
